@@ -10,6 +10,7 @@ import org.junit.jupiter.api.Test;
 import uk.gov.hmcts.reform.pip.account.management.model.account.AzureAccount;
 import uk.gov.hmcts.reform.pip.account.management.model.account.CreationEnum;
 import uk.gov.hmcts.reform.pip.account.management.utils.AccountHelperBase;
+import uk.gov.hmcts.reform.pip.model.account.PiUser;
 import uk.gov.hmcts.reform.pip.model.account.Roles;
 
 import java.util.ArrayList;
@@ -32,9 +33,22 @@ class AzureAccountTest extends AccountHelperBase {
     private static final TypeRef<Map<CreationEnum, List<? extends AzureAccount>>> AZURE_ACCOUNT_RESPONSE_TYPE
         = new TypeRef<>() {};
 
+    private Map<String, String> headers;
+    private String adminCtscUserId;
+
     @BeforeAll
-    public void startUp() {
+    public void startUp() throws JsonProcessingException {
+        String systemAdminUserId;
         bearer = Map.of(HttpHeaders.AUTHORIZATION, BEARER + accessToken);
+
+        PiUser systemAdminUser = createSystemAdminAccount();
+        systemAdminUserId = systemAdminUser.getUserId();
+
+        adminCtscUserId = getCreatedAccountUserId(
+            createAccount(generateEmail(), UUID.randomUUID().toString(), Roles.INTERNAL_ADMIN_CTSC, systemAdminUserId));
+
+        headers = new ConcurrentHashMap<>(bearer);
+        headers.put(ISSUER_ID, adminCtscUserId);
     }
 
     @AfterAll
@@ -56,19 +70,16 @@ class AzureAccountTest extends AccountHelperBase {
         List<AzureAccount> azureAccounts = new ArrayList<>();
         azureAccounts.add(azureAccount);
 
-        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ISSUER_ID, UUID.randomUUID().toString());
-
         Response response =
             doPostRequest(CREATE_AZURE_ACCOUNT, headers, objectMapper.writeValueAsString(azureAccounts));
 
         assertThat(response.getStatusCode()).isEqualTo(OK.value());
 
         AzureAccount createdAccount = response.getBody()
-            .as(AZURE_ACCOUNT_RESPONSE_TYPE).get(CreationEnum.CREATED_ACCOUNTS).get(0);
+            .as(AZURE_ACCOUNT_RESPONSE_TYPE).get(CreationEnum.CREATED_ACCOUNTS).getFirst();
 
         assertThat(createdAccount.getEmail()).isEqualTo(email);
-        createAccount(email, createdAccount.getAzureAccountId());
+        createAccount(email, createdAccount.getAzureAccountId(), adminCtscUserId);
 
         Response getResponse = doGetRequest(String.format(GET_AZURE_ACCOUNT_INFO, createdAccount.getAzureAccountId()),
                      bearer);
