@@ -3,6 +3,7 @@ package uk.gov.hmcts.reform.pip.account.management.controllers.subscription;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -12,12 +13,14 @@ import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.context.jdbc.Sql;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import uk.gov.hmcts.reform.pip.account.management.model.subscription.Subscription;
+import uk.gov.hmcts.reform.pip.account.management.service.authorisation.SubscriptionAuthorisationService;
 import uk.gov.hmcts.reform.pip.account.management.utils.IntegrationTestBase;
 import uk.gov.hmcts.reform.pip.model.subscription.Channel;
 import uk.gov.hmcts.reform.pip.model.subscription.SearchType;
@@ -29,7 +32,9 @@ import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.when;
 import static org.springframework.http.HttpStatus.FORBIDDEN;
 import static org.springframework.http.HttpStatus.NOT_FOUND;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
@@ -70,6 +75,9 @@ class SubscriptionLocationTest extends IntegrationTestBase {
     @Autowired
     protected MockMvc mvc;
 
+    @MockitoBean
+    private SubscriptionAuthorisationService subscriptionAuthorisationService;
+
     @BeforeAll
     void setup() {
         OBJECT_MAPPER.findAndRegisterModules();
@@ -80,6 +88,14 @@ class SubscriptionLocationTest extends IntegrationTestBase {
         SUBSCRIPTION.setSearchValue(LOCATION_ID);
         SUBSCRIPTION.setLocationName(LOCATION_NAME);
         SUBSCRIPTION.setCreatedDate(LocalDateTime.now());
+    }
+
+    @BeforeEach
+    public void setupEach() {
+        when(subscriptionAuthorisationService.userCanAddSubscriptions(any(), any())).thenReturn(true);
+        when(subscriptionAuthorisationService.userCanDeleteSubscriptions(any(), any())).thenReturn(true);
+        when(subscriptionAuthorisationService.userCanViewSubscriptions(any(), any())).thenReturn(true);
+        when(subscriptionAuthorisationService.userCanDeleteLocationSubscriptions(any(), any())).thenReturn(true);
     }
 
     @Test
@@ -104,7 +120,7 @@ class SubscriptionLocationTest extends IntegrationTestBase {
 
         assertEquals(1, userSubscriptions.size(),
                      "Subscriptions list for location id " + LOCATION_ID + " not found");
-        assertEquals(LOCATION_ID, userSubscriptions.get(0).getSearchValue(),
+        assertEquals(LOCATION_ID, userSubscriptions.getFirst().getSearchValue(),
                      "Subscriptions list for location id " + LOCATION_ID + " not found");
     }
 
@@ -175,6 +191,8 @@ class SubscriptionLocationTest extends IntegrationTestBase {
     @Test
     @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
     void testDeleteSubscriptionByLocationUnauthorized() throws Exception {
+        when(subscriptionAuthorisationService.userCanDeleteLocationSubscriptions(any(), any())).thenReturn(false);
+
         MvcResult response = mvc.perform(delete(SUBSCRIPTIONS_BY_LOCATION + LOCATION_ID)
                                              .header(USER_ID_HEADER, SYSTEM_ADMIN_USER_ID))
             .andExpect(status().isForbidden())
